namespace java com.shalong.zhangpai.rsc.thrift.consts

namespace php application.libraries.RedisKeyConstants

/* 规则：redis中的app+业务名称 */

const string NULL_VALUE = "null";

/* 区域 */
const string RSCCOUNTY = "rscCounty";
 
/************************************************************************************************/
/*                                   user    redis key                                          */
/************************************************************************************************/
const string USER_PREFIX = "user_"; //用户基本信息
const string BLACK_LIST_PREFIX = "h_user_black_list"; //用户基本信息
const string ADVERT_INFO_PREFIX = "ADVERT_INFO_PREFIX";
const string ADVERT_TOTAL_COUNT = "ADVERT_TOTAL_COUNT";


